Refactored map obstacles (are now saved via outline and triangulated when loading), which enabled fixing the vision code (now uses the outlines instead of the triangulated shapes). Adapted all files to use CRLF linebreaks. Updated testmap and arama with the new polygons, other maps still outstanding.